<resources>
    <string name="app_name">LoginApp</string>
    <string name="Click_Button">Click </string>
    <string name="login_btn">Login </string>
    <string name="email">Email </string>
    <string name="noAccountYet">No account yet? </string>
    <string name="createOne">Create one</string>
    <string name="passwd">Password</string>
    <string name="famous">famous</string>
    <string name="equalstosymbol">=</string>
    <string name="dividesymbol">÷</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_otp_on_this_given_mobile_number">We will send you an one time otp on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the OTP sent to you</string>
    <string name="didn_t_receive_the_otp">Didnot receive the otp</string>
    <string name="resend_otp_again">RESEND OTP AGAIN</string>
    <string name="submit">submit</string>
    <string name="verify_otp">Verify OTP</string>
</resources>