<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/rollno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/famous"
            android:gravity="center"
            android:textSize="45dp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Enter Email"
            android:ems="10"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/addressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:text="@string/passwd" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Enter Address"
            android:inputType="numberPassword"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />


        <Button
            android:id="@+id/clickBT"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:backgroundTint="@color/dark_red"
            android:layout_marginTop="40dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/accountNoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="10dp"
                android:text="@string/noAccountYet" />

            <TextView
                android:id="@+id/createBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/accountNoTV"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/createOne"
                android:textColor="@color/white"
                android:backgroundTint="@color/light_red"
                />
        </LinearLayout>

    </LinearLayout>

    <!--  <ProgressBar
          android:id="@+id/progressBar"
          style="?android:attr/progressBarStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />-->

</LinearLayout>
