<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/background"
    tools:context=".SendOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

       <ImageView
           android:layout_width="120dp"
           android:layout_height="120dp"
           android:layout_marginTop="90dp"
           android:src="@drawable/sendotp"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_an_one_time_otp_on_this_given_mobile_number"
            android:textColor="@color/ligt_black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/ligt_black"
            android:textSize="14sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:background="@drawable/backgroundbox"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+91"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/input_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="9876543210"
                android:imeOptions="actionDone"
                android:textColorHint="@color/lightgrey"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@color/colordivide"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <Button
            android:id="@+id/buttongetotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get Otp"
            android:layout_margin="30dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/buttonbackground"
            />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:layout_gravity="center"
                />
        </FrameLayout>

    </LinearLayout>

</ScrollView>